# bayesian-digit-classifier

./: .gitignore  README.md  app.py  bayesian_model.pt  data_module.py  model.py  pyproject.toml  run_model.py
bayesian-digit-classifier/: app.py  data_module.py  inference.py  model.py  training.py  utils.py
bayesian-digit-classifier/trained_models/: bayesian_model.pt
lightning_demo/: pytorch_lightning.py  vanilla_pytorch.py
old/: model.py  utils.py
