[tool.poetry]
name = "bayesian-digit-classifier"
version = "0.1.0"
description = ""
authors = ["Tom Matthews <tom.matthews@creditkudos.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
streamlit = "^1.3.1"
torch = "^1.10.1"
streamlit-drawable-canvas = "^0.8.0"
blitz-bayesian-pytorch = "^0.2.7"
watchdog = "^2.1.6"
pytorch-lightning = "^1.5.7"
scipy = "^1.7.3"
plotly = "^5.5.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
pylint = "^2.12.2"
black = { version = "^21.12b0", allow-prereleases = true }

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
